Implemented Locomotion Scene and started on UI

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,10 +79,12 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="Aim X",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Aim X",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="Aim Y",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="Aim Y",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="Aim Y",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="Aim Y",Scale=-1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
