--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GraphicsAssessment")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="GraphicsAssessmentGameModeBase")
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+
