--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,3 +19,7 @@ r.DefaultFeature.MotionBlur=False
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/Levels/Locomotion.Locomotion
+EditorStartupMap=/Game/Levels/Locomotion.Locomotion
+
