--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="Aim X",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Aim X",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="Aim Y",Scale=-1.000000,Key=MouseY)
